--- a/src/TODO
+++ b/src/TODO
@@ -1,4 +1,4 @@
-1) Code clean (with processReq() methods, attributes in ClientHandler, names, etc)
+1) Code clean (with processResp() methods, attributes in ClientHandler, names, etc)
 2) Change the string separator ':';
 3) Fix the list refresh;
 4) Add the scroll to the textArea chats;
