--- a/src/TODO
+++ b/src/TODO
@@ -1,5 +1,5 @@
-1) Code clean (with processXxxResp() methods, names, etc)
-2) Change the string separator ':';
-3) Fix the list refresh;
-4) Improve the graphics (login and logout messages in chat, etc)
-5) Maybe delete the privateChatList on logout
+1) Code clean (with processXxxResp() methods, names, etc) V
+2) Change the string separator ':'; V
+3) Fix the list refresh; 
+4) Improve the graphics (login and logout messages in chat, etc) V
+5) Maybe delete the privateChatList on logout 
